-
Bug
-
Resolution: Done
-
P2: Important
-
5.3.0
-
None
-
Windows 7
32-bit
Qt 5.3.0
-
c3fe8736a8cd00581a33cbea62a752331e6bd619 2799b41d6b6c3ae28acc2c1daad029d9817fc6ad
When setting a QtQuick: Controls 1.1 Menu to disabled, it behaves mostly correctly; it becomes grayed out, and does not change its appearance when hovering over it. However, you can still click on the grayed out menu and its popup will show. You can also trigger the popup by clicking an enabled Menu, then hovering over a disabled Menu in the MenuBar.
This also occurs with disabled sub-menus, where hovering over them will also show their popup.
I have attached an example application based off of the QtCreator default Qt Quick Application.
For Gerrit Dashboard: QTBUG-39384 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
86932,1 | Menu: Properly relay enabled state to QPA menu object | stable | qt/qtquickcontrols | Status: MERGED | +2 | 0 |
86975,3 | Menu: Don't open disabled submenus | stable | qt/qtquickcontrols | Status: MERGED | +2 | 0 |