Menu: Properly relay enabled state to QPA menu object

Task-number: QTBUG-39384
Change-Id: I1b71912b4f35ea0aa9e06667a5c0ecedec30f980
Reviewed-by: J-P Nurmi <jpnurmi@digia.com>